// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.load handles empty data 1`] = `
Object {
  "campaigns": Array [
    Object {
      "bonuses": Object {},
      "endeavors": Object {},
      "expansions": Object {
        "core": "core",
      },
      "hunting": null,
      "id": "new",
      "innovations": Object {},
      "locations": Object {},
      "notes": "",
      "principles": Object {
        "conviction": null,
        "death": null,
        "newlife": null,
        "society": null,
      },
      "settlement": Object {
        "departing": null,
        "name": "New Settlement",
        "newborn": null,
        "showdown": null,
        "survivalLimit": 1,
        "survivors": Object {},
      },
      "showdown": null,
      "stored_resources": Object {},
    },
  ],
  "selectedCampaign": "new",
  "subscription": Object {
    "appLastActiveAt": 0,
    "autoRenewing": false,
    "checkedAt": 0,
    "productId": "",
    "purchasedAt": 0,
    "response": "",
    "transactionId": undefined,
  },
  "version": 2,
}
`;

exports[`.load loads saved data 1`] = `
Object {
  "campaigns": Array [
    Object {
      "bonuses": Object {},
      "endeavors": Object {},
      "expansions": Object {
        "core": "core",
      },
      "hunting": null,
      "id": "new",
      "innovations": Object {},
      "locations": Object {},
      "notes": "my notes",
      "principles": Object {
        "conviction": null,
        "death": null,
        "newlife": null,
        "society": null,
      },
      "settlement": Object {
        "departing": null,
        "name": "New Settlement",
        "newborn": null,
        "showdown": null,
        "survivalLimit": 3,
        "survivors": Object {},
      },
      "showdown": null,
      "stored_resources": Object {},
    },
  ],
  "selectedCampaign": "new",
  "subscription": Object {
    "appLastActiveAt": 0,
    "autoRenewing": false,
    "checkedAt": 0,
    "productId": "",
    "purchasedAt": 0,
    "response": "",
    "transactionId": undefined,
  },
  "version": 1,
}
`;

exports[`all in 1`] = `
Object {
  "campaigns": Array [
    Object {
      "bonuses": Object {},
      "endeavors": Object {},
      "expansions": Object {
        "core": "core",
      },
      "hunting": null,
      "id": "new",
      "innovations": Object {},
      "locations": Object {},
      "notes": "",
      "principles": Object {
        "conviction": null,
        "death": null,
        "newlife": null,
        "society": null,
      },
      "settlement": Object {
        "departing": null,
        "name": "New Settlement",
        "newborn": null,
        "showdown": null,
        "survivalLimit": 1,
        "survivors": Object {},
      },
      "showdown": null,
      "stored_resources": Object {},
    },
    Object {
      "bonuses": Object {
        "conviction": Object {
          "description": Array [
            "When you gain a random FA, draw 3 cards and select one",
          ],
          "id": "conviction",
          "name": "Romantic",
        },
        "cooking": Object {
          "description": Array [
            "At the start of the Settlement phase gain +1 endeavor",
          ],
          "id": "cooking",
          "name": "Cooking",
        },
        "death": Object {
          "description": Array [
            "Whenever a survivor dies, gain 1 random basic resource",
          ],
          "id": "death",
          "name": "Cannibalize",
        },
        "embolden": Object {
          "description": Array [
            "All Surivors gain the **Embolden** survival action.",
            "**Embolden**: Once per round, if you haven't any +1 Str tokens, spend 1 survival to gain +1 Str token. When you are knocked down loose all Str tokens.",
          ],
          "id": "embolden",
          "name": "Embolden",
        },
        "encourage": Object {
          "description": Array [
            "All survivors gain **Encourage** survival action.",
            "**Encourage**: Once per round, if standing spend 1 survival to call out a non-deaf survivor. They stand if knocked down.",
          ],
          "id": "encourage",
          "name": "Encourage",
        },
        "filleting table": Object {
          "description": Array [
            "Once per settlement phase, if the survivors return victorious, gain 1 random basic resource.",
          ],
          "id": "filleting table",
          "name": "Filleting Table",
        },
        "forbidden dance": Object {
          "description": Array [
            "When a survivor uses the Synchronized Strike SFA, reroll missed attack rolls once",
          ],
          "id": "forbidden dance",
          "name": "Forbidden Dance",
        },
        "heart_flute": Object {
          "description": Array [
            "When using Synchronized Strike FA, the attack assist may spend 1 survival to change a monster's R to R Failure before any wound attempts",
          ],
          "id": "heart_flute",
          "name": "Heart Flute",
        },
        "newlife": Object {
          "description": Array [
            "When rolling on intimacy table, roll twice and pick 1 result",
          ],
          "id": "newlife",
          "name": "Protect the Young",
        },
        "overcharge": Object {
          "description": Array [
            "All Surivors gain the **Overcharge** survival action.",
            "**Overcharge**: If you have any +1 Str token, you may spend 1 survival to remove of them and gain devastating 1 to your next attack this round.",
          ],
          "id": "overcharge",
          "name": "Overcharge",
        },
        "pictograph": Object {
          "description": Array [
            "At the start of a survivor's act, they may decide to skip their act and Run Away",
            "After a hunt event is resolved, a survivor may Run Away",
          ],
          "id": "pictograph",
          "name": "Pictograph",
        },
        "society": Object {
          "description": Array [
            "Add +2 to all Brain Trauma Rolls.",
          ],
          "id": "society",
          "name": "Accept Darkness",
        },
        "symposium": Object {
          "description": Array [
            "When a survivor innovates, draw an additional 2 innovation cards to choose from",
          ],
          "id": "symposium",
          "name": "Symposium",
        },
        "the knowledge worm": Object {
          "description": Array [
            "At the start of each settlement phase add 1 scrap resource to storage",
          ],
          "id": "the knowledge worm",
          "name": "The Knowledge Worm",
        },
      },
      "endeavors": Object {
        "advance cutting": Object {
          "expansion": "sunstalker",
          "id": "advance cutting",
          "name": "Advance Cutting",
          "recipe": Object {
            "innovation": "filleting table",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "albedo": Object {
          "expansion": "gorm",
          "id": "albedo",
          "name": "Albedo",
          "recipe": Object {
            "innovation": "albedo",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "augury": Object {
          "expansion": "core",
          "id": "augury",
          "name": "Augury",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "organ_grinder",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "battle_paint": Object {
          "expansion": "core",
          "id": "battle_paint",
          "name": "Battle Paint",
          "recipe": Object {
            "innovation": "face_painting",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "bed": Object {
          "expansion": "core",
          "id": "bed",
          "name": "Rest",
          "recipe": Object {
            "innovation": "bed",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "black_harvest": Object {
          "expansion": "dbk",
          "id": "black_harvest",
          "name": "Black Harvest",
          "recipe": Object {
            "innovation": "subterranean agriculture",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "preserved caustic dung",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "bloodletting": Object {
          "expansion": "core",
          "id": "bloodletting",
          "name": "Braething a Vein",
          "recipe": Object {
            "innovation": "bloodletting",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "resource",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "bone_beats": Object {
          "expansion": "core",
          "id": "bone_beats",
          "name": "Bone Beats",
          "recipe": Object {
            "innovation": "drums",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "build silk mill": Object {
          "expansion": "spidicules",
          "id": "build silk mill",
          "name": "Build - Silk Mill",
          "recipe": Object {
            "innovation": "silk refining",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "silk",
                "quantity": 2,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": "silk mill",
          },
        },
        "build_blacksmith": Object {
          "expansion": "core",
          "id": "build_blacksmith",
          "name": "Build - Blacksmith",
          "recipe": Object {
            "innovation": "scrap_smelting",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 6,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "scrap",
                "quantity": 3,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": "blacksmith",
          },
        },
        "build_bone_smith": Object {
          "expansion": "dk",
          "id": "build_bone_smith",
          "name": "Build - Bone Smith",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "throne",
            "not_innovation": null,
            "not_location": "bone_smith",
          },
        },
        "build_leather_worker": Object {
          "expansion": "core",
          "id": "build_leather_worker",
          "name": "Build - Leather Worker",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "hide",
                "quantity": 3,
                "resource": null,
              },
            ],
            "location": "skinnery",
            "not_innovation": null,
            "not_location": "leather_worker",
          },
        },
        "build_organ_grinder": Object {
          "expansion": "dk",
          "id": "build_organ_grinder",
          "name": "Build - Organ Grinder",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "throne",
            "not_innovation": null,
            "not_location": "organ_grinder",
          },
        },
        "build_skinnery": Object {
          "expansion": "dk",
          "id": "build_skinnery",
          "name": "Build - Skinnery",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "throne",
            "not_innovation": null,
            "not_location": "skinnery",
          },
        },
        "build_stone_circle": Object {
          "expansion": "core",
          "id": "build_stone_circle",
          "name": "Build - Stone Circle",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 3,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "hide",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "organ_grinder",
            "not_innovation": null,
            "not_location": "stone_circle",
          },
        },
        "build_weapon_crafter": Object {
          "expansion": "core",
          "id": "build_weapon_crafter",
          "name": "Build - Weapon Crafter",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 3,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "hide",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "bone_smith",
            "not_innovation": null,
            "not_location": "weapon_crafter",
          },
        },
        "build_wet_resin_crafter": Object {
          "expansion": "dbk",
          "id": "build_wet_resin_crafter",
          "name": "Build - Wet Resin Crafter",
          "recipe": Object {
            "innovation": "subterranean agriculture",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 2,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 2,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": "wet_resin_crafter",
          },
        },
        "citrinitas": Object {
          "expansion": "gorm",
          "id": "citrinitas",
          "name": "Citrinitas",
          "recipe": Object {
            "innovation": "citrinitas",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 3,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "cooking": Object {
          "expansion": "core",
          "id": "cooking",
          "name": "Cooking",
          "recipe": Object {
            "innovation": "cooking",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "cooking_meal": Object {
          "expansion": "core",
          "id": "cooking_meal",
          "name": "Cook stone nose gruel",
          "recipe": Object {
            "innovation": "cooking",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "create hide": Object {
          "expansion": "spidicules",
          "id": "create hide",
          "name": "Create Hide",
          "recipe": Object {
            "innovation": "silk refining",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "crimson cannibalism": Object {
          "expansion": "manhunter",
          "id": "crimson cannibalism",
          "name": "Crimson Cannibalism",
          "recipe": Object {
            "innovation": "crimson candy",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "dark water research": Object {
          "expansion": "slenderman",
          "id": "dark water research",
          "name": "Dark Water Research",
          "recipe": Object {
            "innovation": "darkwater research",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "resource",
                "quantity": 2,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "dark water",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "face the monster": Object {
          "expansion": "lk",
          "id": "face the monster",
          "name": "Face the monster",
          "recipe": Object {
            "innovation": "black mask",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "fear and trembling": Object {
          "expansion": "dk",
          "id": "fear and trembling",
          "name": "Fear and Trembling",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "throne",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "fermentation": Object {
          "expansion": "core",
          "id": "fermentation",
          "name": "Fermentation",
          "recipe": Object {
            "innovation": "pottery",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "final dance": Object {
          "expansion": "sunstalker",
          "id": "final dance",
          "name": "Final Dance",
          "recipe": Object {
            "innovation": "shadow dancing",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "forbidden dance": Object {
          "expansion": "core",
          "id": "forbidden dance",
          "name": "Forbidden Dance",
          "recipe": Object {
            "innovation": "forbidden dance",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "founders_eye": Object {
          "expansion": "core",
          "id": "founders_eye",
          "name": "Founder's Eye",
          "recipe": Object {
            "innovation": "face_painting",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "get web silk": Object {
          "expansion": "spidicules",
          "id": "get web silk",
          "name": "Get Web Silk",
          "recipe": Object {
            "innovation": "legless ball",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "golden_eyed_king": Object {
          "expansion": "core",
          "id": "golden_eyed_king",
          "name": "Hunt the Golden Eyed King",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": "phoenix_mask",
                "keyword": null,
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "mask_maker",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "gormchymist": Object {
          "expansion": "gorm",
          "id": "gormchymist",
          "name": "Get Gormchymy innovation",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "gorm brain",
              },
              Object {
                "gear": null,
                "keyword": "strange",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "gormchymist",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "great_golden_cat": Object {
          "expansion": "core",
          "id": "great_golden_cat",
          "name": "Hunt the Great Golden Cat",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": "white_lion_mask",
                "keyword": null,
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "mask_maker",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "guidepost": Object {
          "expansion": "core",
          "id": "guidepost",
          "name": "Guidepost",
          "recipe": Object {
            "innovation": "guidepost",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "harvest_ritual": Object {
          "expansion": "core",
          "id": "harvest_ritual",
          "name": "Harvest Ritual",
          "recipe": Object {
            "innovation": "forbidden dance",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "stone_circle",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "heart_flute": Object {
          "expansion": "core",
          "id": "heart_flute",
          "name": "Devil's Melody",
          "recipe": Object {
            "innovation": "heart_flute",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "innovate": Object {
          "expansion": "dk",
          "id": "innovate",
          "name": "Innovate",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "hide",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "throne",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "innovate pottery": Object {
          "expansion": "sunstalker",
          "id": "innovate pottery",
          "name": "Innovate Pottery",
          "recipe": Object {
            "innovation": "umbilical bank",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 3,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": "pottery",
            "not_location": null,
          },
        },
        "innovate_scrap_smelting": Object {
          "expansion": "core",
          "id": "innovate_scrap_smelting",
          "name": "Innovate Scrap Smelting",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "scrap",
                "quantity": 2,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "bone",
                "quantity": 5,
                "resource": null,
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 5,
                "resource": null,
              },
            ],
            "location": "weapon_crafter",
            "not_innovation": "scrap_smelting",
            "not_location": null,
          },
        },
        "investigate": Object {
          "expansion": "core",
          "id": "investigate",
          "name": "Investigate",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "exhausted_lantern_hoard",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "kill spidicules": Object {
          "expansion": "spidicules",
          "id": "kill spidicules",
          "name": "Kill Spidicules",
          "recipe": Object {
            "innovation": "legless ball",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "lantern_research": Object {
          "expansion": "core",
          "id": "lantern_research",
          "name": "Lantern Research - Pulse Discoveries",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
              Object {
                "gear": "final_lantern",
                "keyword": null,
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "exhausted_lantern_hoard",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "leather_making": Object {
          "expansion": "core",
          "id": "leather_making",
          "name": "Leather Making",
          "recipe": Object {
            "innovation": "ammonia",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "hide",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "leather_worker",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "leave offering": Object {
          "expansion": "lk",
          "id": "leave offering",
          "name": "Leave the monster an offering",
          "recipe": Object {
            "innovation": "white mask",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "light-forging": Object {
          "expansion": "slenderman",
          "id": "light-forging",
          "name": "Light-Forging",
          "recipe": Object {
            "innovation": "darkwater research",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "mad_steed": Object {
          "expansion": "core",
          "id": "mad_steed",
          "name": "Hunt the Mad Streed",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": "antelope_mask",
                "keyword": null,
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "mask_maker",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "momento_mori": Object {
          "expansion": "core",
          "id": "momento_mori",
          "name": "Momento Mori",
          "recipe": Object {
            "innovation": "momento_mori",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "new recruits": Object {
          "expansion": "manhunter",
          "id": "new recruits",
          "name": "New Recruits",
          "recipe": Object {
            "innovation": "settlement watch",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "nightmare training": Object {
          "expansion": "core",
          "id": "nightmare training",
          "name": "Train",
          "recipe": Object {
            "innovation": "nightmare training",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "nigredo": Object {
          "expansion": "gorm",
          "id": "nigredo",
          "name": "Nigredo",
          "recipe": Object {
            "innovation": "nigredo",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "oxidation": Object {
          "expansion": "core",
          "id": "oxidation",
          "name": "Oxidation",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "exhausted_lantern_hoard",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "partnership": Object {
          "expansion": "core",
          "id": "partnership",
          "name": "Partnership",
          "recipe": Object {
            "innovation": "partnership",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "purification": Object {
          "expansion": "core",
          "id": "purification",
          "name": "Purification",
          "recipe": Object {
            "innovation": "scrap_smelting",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "purification ceremony": Object {
          "expansion": "sunstalker",
          "id": "purification ceremony",
          "name": "Purification Ceremony",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
            ],
            "location": "sacred pool",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "records": Object {
          "expansion": "core",
          "id": "records",
          "name": "Create monster Volume",
          "recipe": Object {
            "innovation": "records",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "records_fa": Object {
          "expansion": "core",
          "id": "records_fa",
          "name": "Gain Scholar of Death SFA",
          "recipe": Object {
            "innovation": "records",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "ret": Object {
          "expansion": "core",
          "id": "ret",
          "name": "Ret",
          "recipe": Object {
            "innovation": "pottery",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "herb",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "round stone training": Object {
          "expansion": "dbk",
          "id": "round stone training",
          "name": "Train",
          "recipe": Object {
            "innovation": "round stone training",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "resource",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "rubedo": Object {
          "expansion": "gorm",
          "id": "rubedo",
          "name": "Rubedo",
          "recipe": Object {
            "innovation": "rubedo",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 4,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "sacred water": Object {
          "expansion": "sunstalker",
          "id": "sacred water",
          "name": "Sacred Water",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "sacred pool",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "sacrification": Object {
          "expansion": "core",
          "id": "sacrification",
          "name": "Initiation",
          "recipe": Object {
            "innovation": "sacrification",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "sacrifice": Object {
          "expansion": "core",
          "id": "sacrifice",
          "name": "Death Ritual",
          "recipe": Object {
            "innovation": "sacrifice",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "scrap_scavenge": Object {
          "expansion": "core",
          "id": "scrap_scavenge",
          "name": "Scrap Scavenge",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "weapon_crafter",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "sculpture_statue": Object {
          "expansion": "core",
          "id": "sculpture_statue",
          "name": "Sculpt Statue",
          "recipe": Object {
            "innovation": "sculpture",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "sculpture_study_statue": Object {
          "expansion": "core",
          "id": "sculpture_study_statue",
          "name": "Study Statue",
          "recipe": Object {
            "innovation": "sculpture",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "shared_experience": Object {
          "expansion": "core",
          "id": "shared_experience",
          "name": "Shared Experience",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "lantern_hoard",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "shrine": Object {
          "expansion": "core",
          "id": "shrine",
          "name": "Armor Ritual",
          "recipe": Object {
            "innovation": "shrine",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "silk surgery": Object {
          "expansion": "spidicules",
          "id": "silk surgery",
          "name": "Silk Surgery",
          "recipe": Object {
            "innovation": "silk refining",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "spar": Object {
          "expansion": "dk",
          "id": "spar",
          "name": "Spar",
          "recipe": Object {
            "innovation": "arena",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "iron",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "spider dance": Object {
          "expansion": "spidicules",
          "id": "spider dance",
          "name": "Spider Dance",
          "recipe": Object {
            "innovation": "choreia",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "stone_noses": Object {
          "expansion": "core",
          "id": "stone_noses",
          "name": "Stone Noses",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "organ_grinder",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "storytelling": Object {
          "expansion": "core",
          "id": "storytelling",
          "name": "Story Time",
          "recipe": Object {
            "innovation": "storytelling",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 2,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "sun sealing": Object {
          "expansion": "sunstalker",
          "id": "sun sealing",
          "name": "Sun Sealing",
          "recipe": Object {
            "innovation": "sauna shrine",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "sacred pool",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "survivors_lantern": Object {
          "expansion": "core",
          "id": "survivors_lantern",
          "name": "Survivor's Lantern",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": "final_lantern",
                "keyword": null,
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": "exhausted_lantern_hoard",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "trace petals": Object {
          "expansion": "fk",
          "id": "trace petals",
          "name": "Trace Petals",
          "recipe": Object {
            "innovation": "petal spiral",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "trepanning": Object {
          "expansion": "core",
          "id": "trepanning",
          "name": "Trepanning",
          "recipe": Object {
            "innovation": null,
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": "barber_surgeon",
            "not_innovation": null,
            "not_location": null,
          },
        },
        "tribute": Object {
          "expansion": "sunstalker",
          "id": "tribute",
          "name": "Tribute",
          "recipe": Object {
            "innovation": "sauna shrine",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
              Object {
                "gear": null,
                "keyword": "organ",
                "quantity": 1,
                "resource": null,
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "umbilical symbiosis": Object {
          "expansion": "sunstalker",
          "id": "umbilical symbiosis",
          "name": "Umbilical Symbiosis",
          "recipe": Object {
            "innovation": "umbilical bank",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "underground_sow": Object {
          "expansion": "dbk",
          "id": "underground_sow",
          "name": "Underground Sow",
          "recipe": Object {
            "innovation": "subterranean agriculture",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "underwater train": Object {
          "expansion": "sunstalker",
          "id": "underwater train",
          "name": "Underwater Train",
          "recipe": Object {
            "innovation": "filleting table",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "visit retinue": Object {
          "expansion": "lk",
          "id": "visit retinue",
          "name": "Visit the retinue",
          "recipe": Object {
            "innovation": "white mask",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "war room": Object {
          "expansion": "manhunter",
          "id": "war room",
          "name": "Reroll 1 Hunt Event",
          "recipe": Object {
            "innovation": "war room",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
        "worship monster": Object {
          "expansion": "lk",
          "id": "worship monster",
          "name": "Worship the monster",
          "recipe": Object {
            "innovation": "stoic statue",
            "items": Array [
              Object {
                "gear": null,
                "keyword": null,
                "quantity": 1,
                "resource": "endeavor",
              },
            ],
            "location": null,
            "not_innovation": null,
            "not_location": null,
          },
        },
      },
      "expansions": Object {
        "core": "core",
        "dbk": "dbk",
        "dk": "dk",
        "fk": "fk",
        "gka": "gka",
        "gorm": "gorm",
        "lg": "lg",
        "lk": "lk",
        "lt": "lt",
        "manhunter": "manhunter",
        "slenderman": "slenderman",
        "spidicules": "spidicules",
        "sunstalker": "sunstalker",
      },
      "hunting": null,
      "id": "960aa7ae-598a-49eb-888b-c6baa0006751",
      "innovations": Object {
        "albedo": "albedo",
        "ammonia": "ammonia",
        "aquarobics": "aquarobics",
        "arena": "arena",
        "bed": "bed",
        "black mask": "black mask",
        "bloodletting": "bloodletting",
        "bloodline": "bloodline",
        "choreia": "choreia",
        "citrinitas": "citrinitas",
        "clan_of_death": "clan_of_death",
        "cooking": "cooking",
        "crimson candy": "crimson candy",
        "darkwater research": "darkwater research",
        "destiny": "destiny",
        "dragon speech": "dragon speech",
        "drums": "drums",
        "empire": "empire",
        "face_painting": "face_painting",
        "family": "family",
        "filleting table": "filleting table",
        "final_fighting_art": "final_fighting_art",
        "forbidden dance": "forbidden dance",
        "guidepost": "guidepost",
        "hands of the sun": "hands of the sun",
        "heart_flute": "heart_flute",
        "hovel": "hovel",
        "inner_lantern": "inner_lantern",
        "language": "language",
        "lantern_oven": "lantern_oven",
        "legless ball": "legless ball",
        "mastery_axe": "mastery_axe",
        "mastery_bow": "mastery_bow",
        "mastery_club": "mastery_club",
        "mastery_dagger": "mastery_dagger",
        "mastery_fist_and_tooth": "mastery_fist_and_tooth",
        "mastery_grand_weapon": "mastery_grand_weapon",
        "mastery_katar": "mastery_katar",
        "mastery_scythe": "mastery_scythe",
        "mastery_shield": "mastery_shield",
        "mastery_spear": "mastery_spear",
        "mastery_sword": "mastery_sword",
        "mastery_twilight_sword": "mastery_twilight_sword",
        "mastery_whip": "mastery_whip",
        "momento_mori": "momento_mori",
        "nightmare training": "nightmare training",
        "nigredo": "nigredo",
        "paint": "paint",
        "partnership": "partnership",
        "petal spiral": "petal spiral",
        "pictograph": "pictograph",
        "pottery": "pottery",
        "radiating orb": "radiating orb",
        "records": "records",
        "round stone training": "round stone training",
        "rubedo": "rubedo",
        "sacrification": "sacrification",
        "sacrifice": "sacrifice",
        "saga": "saga",
        "sauna shrine": "sauna shrine",
        "scrap_smelting": "scrap_smelting",
        "sculpture": "sculpture",
        "settlement watch": "settlement watch",
        "shadow dancing": "shadow dancing",
        "shrine": "shrine",
        "silk refining": "silk refining",
        "song_of_the_brave": "song_of_the_brave",
        "stoic statue": "stoic statue",
        "storytelling": "storytelling",
        "subterranean agriculture": "subterranean agriculture",
        "sun language": "sun language",
        "symposium": "symposium",
        "the knowledge worm": "the knowledge worm",
        "ultimate_weapon": "ultimate_weapon",
        "umbilical bank": "umbilical bank",
        "war room": "war room",
        "white mask": "white mask",
      },
      "locations": Object {
        "barber_surgeon": "barber_surgeon",
        "blacksmith": "blacksmith",
        "bone_smith": "bone_smith",
        "catarium": "catarium",
        "dragon armory": "dragon armory",
        "exhausted_lantern_hoard": "exhausted_lantern_hoard",
        "gormchymist": "gormchymist",
        "gormery": "gormery",
        "lantern_hoard": "lantern_hoard",
        "leather_worker": "leather_worker",
        "mask_maker": "mask_maker",
        "organ_grinder": "organ_grinder",
        "plumery": "plumery",
        "sacred pool": "sacred pool",
        "silk mill": "silk mill",
        "skinnery": "skinnery",
        "skyreef sanctuary": "skyreef sanctuary",
        "stone_circle": "stone_circle",
        "the sun": "the sun",
        "throne": "throne",
        "weapon_crafter": "weapon_crafter",
        "wet_resin_crafter": "wet_resin_crafter",
      },
      "notes": "",
      "principles": Object {
        "conviction": "romantic",
        "death": "cannibalize",
        "newlife": "pty",
        "society": "accept_darkness",
      },
      "settlement": Object {
        "departing": Object {
          "accuracy": 0,
          "courage": 0,
          "description": Array [
            "**Song of the Brave**: During Overwhelming Darkness story event each non-deaf survivor may select the Path of the Brave",
            "**The Knowledge Worm**: survivors with 10+ insanity, \\"A Gracious Host\\"",
            "**War room**: Quarries can't move off the hunt board. If survivors would need to move backwards roll 1d10, on 4+ they don't.",
            "**Settlement Watch**: Survivors gain +2 survival when they depart for a Nemesis encounter or Special Showdown",
            "**Sauna Shrine**: When departing for a nemesis encounter or special showdown, gain +10 survival.",
            "**Radiating Orb**: Survivors with a constellation gain +1 survival",
          ],
          "evasion": 0,
          "hunt xp": 0,
          "insanity": 5,
          "strength": 0,
          "survival": 9,
          "understanding": 0,
        },
        "name": "test",
        "newborn": Object {
          "accuracy": 1,
          "courage": 2,
          "description": Array [
            "**Family**: a newborn survivor inherits the surname of one of the parents, their weapon type and 1/2 their weapon proficiency.",
            "**Umbilical Bank**: You may add 1 Life String strange resource to the storage.",
            "**Bloodline**: inherit the following from parents:

* The Oracle's Eye, Iridescent Hide or Pristine ability.
* 1 Surname.
* Half of the parent's weapon proficiency levels, rounded up.",
            "**Empire**: gain **Pristine** ability",
            "**Pristine**: when you suffer a dismembered severe injury, ignore it and gain 1 bleeding token instead.",
          ],
          "evasion": 1,
          "hunt xp": 2,
          "insanity": 0,
          "strength": 2,
          "survival": 1,
          "understanding": 2,
        },
        "showdown": Object {
          "accuracy": 0,
          "courage": 0,
          "description": Array [
            "**Final Fighting Art**: Once per showdown you may select an AI card from the discard or wound pile and put it on top of AI deck",
            "**Song of the Brave**: On arrival each non-deaf survivor may remove 1 negative attribute token",
            "**Ultimate Weapon**: When you defeat a monster, gain 1 monster resource of your choice",
            "**Crimson Candy**: At the start of the showdown each survivor gains * survival",
          ],
          "evasion": 0,
          "hunt xp": 0,
          "insanity": 0,
          "strength": 0,
          "survival": 0,
          "understanding": 0,
        },
        "survivalLimit": 20,
        "survivors": Object {
          "3352353f-f7df-44ab-8c13-a350c7e35a7b": Object {
            "abilities": Array [],
            "accuracy": 1,
            "cannotUseAbilities": false,
            "cannotUseFightingArts": false,
            "cannotUseSurvival": false,
            "courage": 2,
            "disorders": Array [],
            "evasion": 1,
            "fightingArts": Array [],
            "gender": "male",
            "hunt xp": 2,
            "id": "3352353f-f7df-44ab-8c13-a350c7e35a7b",
            "insanity": 0,
            "luck": 0,
            "movement": 5,
            "name": "survivor 1",
            "notes": "",
            "rerollUsed": false,
            "speed": 0,
            "status": "alive",
            "strength": 2,
            "survival": 1,
            "understanding": 2,
            "weaponProficiency": undefined,
            "weaponProficiencyLevel": 0,
          },
          "3792b21e-fc96-4a5e-a2cd-6cccff3747a8": Object {
            "abilities": Array [
              "Acid Palms",
              "Homing Instinct",
              "Metal Maw",
              "Way of the Rust",
            ],
            "accuracy": 1,
            "cannotUseAbilities": false,
            "cannotUseFightingArts": false,
            "cannotUseSurvival": false,
            "courage": 2,
            "disorders": Array [
              "Absent Seizures",
              "Fear of the Dark",
              "Indecision",
            ],
            "evasion": 1,
            "fightingArts": Array [
              "Acrobatics",
              "Clutch Fighter",
              "Clarity of Darkness",
            ],
            "gender": "male",
            "hunt xp": 2,
            "id": "3792b21e-fc96-4a5e-a2cd-6cccff3747a8",
            "insanity": 0,
            "luck": 0,
            "movement": 5,
            "name": "survivor 2",
            "notes": "",
            "rerollUsed": false,
            "speed": 0,
            "status": "alive",
            "strength": 2,
            "survival": 1,
            "understanding": 2,
            "weaponProficiency": "fist & tooth",
            "weaponProficiencyLevel": 0,
          },
        },
      },
      "showdown": null,
      "stored_resources": Object {
        "1,000 year sunspot": Object {
          "id": "1,000 year sunspot",
          "quantity": 1,
          "resource": "1,000 year sunspot",
        },
        "3,000 year sunspot": Object {
          "id": "3,000 year sunspot",
          "quantity": 1,
          "resource": "3,000 year sunspot",
        },
        "???": Object {
          "id": "???",
          "quantity": 1,
          "resource": "???",
        },
        "acid gland": Object {
          "id": "acid gland",
          "quantity": 1,
          "resource": "acid gland",
        },
        "aracnid heart": Object {
          "id": "aracnid heart",
          "quantity": 1,
          "resource": "aracnid heart",
        },
        "beetle horn": Object {
          "id": "beetle horn",
          "quantity": 1,
          "resource": "beetle horn",
        },
        "bird beak": Object {
          "id": "bird beak",
          "quantity": 1,
          "resource": "bird beak",
        },
        "black lens": Object {
          "id": "black lens",
          "quantity": 1,
          "resource": "black lens",
        },
        "black skull": Object {
          "id": "black skull",
          "quantity": 1,
          "resource": "black skull",
        },
        "bladder": Object {
          "id": "bladder",
          "quantity": 1,
          "resource": "bladder",
        },
        "blistering plasma fruit": Object {
          "id": "blistering plasma fruit",
          "quantity": 1,
          "resource": "blistering plasma fruit",
        },
        "brain root": Object {
          "id": "brain root",
          "quantity": 1,
          "resource": "brain root",
        },
        "broken lantern": Object {
          "id": "broken lantern",
          "quantity": 1,
          "resource": "broken lantern",
        },
        "cabled vein": Object {
          "id": "cabled vein",
          "quantity": 1,
          "resource": "cabled vein",
        },
        "canopic jar": Object {
          "id": "canopic jar",
          "quantity": 1,
          "resource": "canopic jar",
        },
        "century fingernails": Object {
          "id": "century fingernails",
          "quantity": 1,
          "resource": "century fingernails",
        },
        "century shell": Object {
          "id": "century shell",
          "quantity": 1,
          "resource": "century shell",
        },
        "chitin": Object {
          "id": "chitin",
          "quantity": 1,
          "resource": "chitin",
        },
        "compound eye": Object {
          "id": "compound eye",
          "quantity": 1,
          "resource": "compound eye",
        },
        "crab spider": Object {
          "id": "crab spider",
          "quantity": 1,
          "resource": "crab spider",
        },
        "crimson vial": Object {
          "id": "crimson vial",
          "quantity": 1,
          "resource": "crimson vial",
        },
        "crystal sword mold": Object {
          "id": "crystal sword mold",
          "quantity": 1,
          "resource": "crystal sword mold",
        },
        "curious hand": Object {
          "id": "curious hand",
          "quantity": 1,
          "resource": "curious hand",
        },
        "cycloid scales": Object {
          "id": "cycloid scales",
          "quantity": 1,
          "resource": "cycloid scales",
        },
        "cyclops fly": Object {
          "id": "cyclops fly",
          "quantity": 1,
          "resource": "cyclops fly",
        },
        "dark water": Object {
          "id": "dark water",
          "quantity": 1,
          "resource": "dark water",
        },
        "dense bone": Object {
          "id": "dense bone",
          "quantity": 1,
          "resource": "dense bone",
        },
        "dragon iron": Object {
          "id": "dragon iron",
          "quantity": 1,
          "resource": "dragon iron",
        },
        "drifting dream fruit": Object {
          "id": "drifting dream fruit",
          "quantity": 1,
          "resource": "drifting dream fruit",
        },
        "elder cat teeth": Object {
          "id": "elder cat teeth",
          "quantity": 1,
          "resource": "elder cat teeth",
        },
        "elytra": Object {
          "id": "elytra",
          "quantity": 1,
          "resource": "elytra",
        },
        "endeavor": Object {
          "id": "endeavor",
          "quantity": 1,
          "resource": "endeavor",
        },
        "exoskeleton": Object {
          "id": "exoskeleton",
          "quantity": 1,
          "resource": "exoskeleton",
        },
        "eye of cat": Object {
          "id": "eye of cat",
          "quantity": 1,
          "resource": "eye of cat",
        },
        "eyeballs": Object {
          "id": "eyeballs",
          "quantity": 1,
          "resource": "eyeballs",
        },
        "fertility tentacle": Object {
          "id": "fertility tentacle",
          "quantity": 1,
          "resource": "fertility tentacle",
        },
        "fresh acanthus": Object {
          "id": "fresh acanthus",
          "quantity": 1,
          "resource": "fresh acanthus",
        },
        "golden whiskers": Object {
          "id": "golden whiskers",
          "quantity": 1,
          "resource": "golden whiskers",
        },
        "gorm brain": Object {
          "id": "gorm brain",
          "quantity": 1,
          "resource": "gorm brain",
        },
        "great cat bone": Object {
          "id": "great cat bone",
          "quantity": 1,
          "resource": "great cat bone",
        },
        "hagfish": Object {
          "id": "hagfish",
          "quantity": 1,
          "resource": "hagfish",
        },
        "handed skull": Object {
          "id": "handed skull",
          "quantity": 1,
          "resource": "handed skull",
        },
        "hardened ribs": Object {
          "id": "hardened ribs",
          "quantity": 1,
          "resource": "hardened ribs",
        },
        "hissing cockroach": Object {
          "id": "hissing cockroach",
          "quantity": 1,
          "resource": "hissing cockroach",
        },
        "hollow wing bone": Object {
          "id": "hollow wing bone",
          "quantity": 1,
          "resource": "hollow wing bone",
        },
        "horn fragment": Object {
          "id": "horn fragment",
          "quantity": 1,
          "resource": "horn fragment",
        },
        "huge sunteeth": Object {
          "id": "huge sunteeth",
          "quantity": 1,
          "resource": "huge sunteeth",
        },
        "husk": Object {
          "id": "husk",
          "quantity": 1,
          "resource": "husk",
        },
        "inner shadow skin": Object {
          "id": "inner shadow skin",
          "quantity": 1,
          "resource": "inner shadow skin",
        },
        "iron": Object {
          "id": "iron",
          "quantity": 1,
          "resource": "iron",
        },
        "jagged marrow fruit": Object {
          "id": "jagged marrow fruit",
          "quantity": 1,
          "resource": "jagged marrow fruit",
        },
        "jiggling lard": Object {
          "id": "jiggling lard",
          "quantity": 1,
          "resource": "jiggling lard",
        },
        "jowls": Object {
          "id": "jowls",
          "quantity": 1,
          "resource": "jowls",
        },
        "king's claws": Object {
          "id": "king's claws",
          "quantity": 1,
          "resource": "king's claws",
        },
        "king's tongue": Object {
          "id": "king's tongue",
          "quantity": 1,
          "resource": "king's tongue",
        },
        "lantern bloom": Object {
          "id": "lantern bloom",
          "quantity": 1,
          "resource": "lantern bloom",
        },
        "lantern bud": Object {
          "id": "lantern bud",
          "quantity": 1,
          "resource": "lantern bud",
        },
        "large appendage": Object {
          "id": "large appendage",
          "quantity": 1,
          "resource": "large appendage",
        },
        "large flat tooth": Object {
          "id": "large flat tooth",
          "quantity": 1,
          "resource": "large flat tooth",
        },
        "leather": Object {
          "id": "leather",
          "quantity": 1,
          "resource": "leather",
        },
        "legendary horns": Object {
          "id": "legendary horns",
          "quantity": 1,
          "resource": "legendary horns",
        },
        "lion claw": Object {
          "id": "lion claw",
          "quantity": 1,
          "resource": "lion claw",
        },
        "lion tail": Object {
          "id": "lion tail",
          "quantity": 1,
          "resource": "lion tail",
        },
        "lion testes": Object {
          "id": "lion testes",
          "quantity": 1,
          "resource": "lion testes",
        },
        "lonely ant": Object {
          "id": "lonely ant",
          "quantity": 1,
          "resource": "lonely ant",
        },
        "lonely fruit": Object {
          "id": "lonely fruit",
          "quantity": 1,
          "resource": "lonely fruit",
        },
        "love juice": Object {
          "id": "love juice",
          "quantity": 1,
          "resource": "love juice",
        },
        "mammoth hand": Object {
          "id": "mammoth hand",
          "quantity": 1,
          "resource": "mammoth hand",
        },
        "meaty rib": Object {
          "id": "meaty rib",
          "quantity": 1,
          "resource": "meaty rib",
        },
        "milky eye": Object {
          "id": "milky eye",
          "quantity": 1,
          "resource": "milky eye",
        },
        "monster bone": Object {
          "id": "monster bone",
          "quantity": 1,
          "resource": "monster bone",
        },
        "monster hide": Object {
          "id": "monster hide",
          "quantity": 1,
          "resource": "monster hide",
        },
        "monster organ": Object {
          "id": "monster organ",
          "quantity": 1,
          "resource": "monster organ",
        },
        "muculent droppings": Object {
          "id": "muculent droppings",
          "quantity": 1,
          "resource": "muculent droppings",
        },
        "muscly gums": Object {
          "id": "muscly gums",
          "quantity": 1,
          "resource": "muscly gums",
        },
        "nightmare tick": Object {
          "id": "nightmare tick",
          "quantity": 1,
          "resource": "nightmare tick",
        },
        "old blue box": Object {
          "id": "old blue box",
          "quantity": 1,
          "resource": "old blue box",
        },
        "osseous bloom": Object {
          "id": "osseous bloom",
          "quantity": 1,
          "resource": "osseous bloom",
        },
        "pelt": Object {
          "id": "pelt",
          "quantity": 1,
          "resource": "pelt",
        },
        "perfect crucible": Object {
          "id": "perfect crucible",
          "quantity": 1,
          "resource": "perfect crucible",
        },
        "phoenix crest": Object {
          "id": "phoenix crest",
          "quantity": 1,
          "resource": "phoenix crest",
        },
        "phoenix eye": Object {
          "id": "phoenix eye",
          "quantity": 1,
          "resource": "phoenix eye",
        },
        "phoenix finger": Object {
          "id": "phoenix finger",
          "quantity": 1,
          "resource": "phoenix finger",
        },
        "phoenix whisker": Object {
          "id": "phoenix whisker",
          "quantity": 1,
          "resource": "phoenix whisker",
        },
        "pituitary gland": Object {
          "id": "pituitary gland",
          "quantity": 1,
          "resource": "pituitary gland",
        },
        "porous flesh fruit": Object {
          "id": "porous flesh fruit",
          "quantity": 1,
          "resource": "porous flesh fruit",
        },
        "preserved caustic dung": Object {
          "id": "preserved caustic dung",
          "quantity": 1,
          "resource": "preserved caustic dung",
        },
        "prismatic gills": Object {
          "id": "prismatic gills",
          "quantity": 1,
          "resource": "prismatic gills",
        },
        "pustules": Object {
          "id": "pustules",
          "quantity": 1,
          "resource": "pustules",
        },
        "radiant heart": Object {
          "id": "radiant heart",
          "quantity": 1,
          "resource": "radiant heart",
        },
        "radioactive dung": Object {
          "id": "radioactive dung",
          "quantity": 1,
          "resource": "radioactive dung",
        },
        "rainbow droppings": Object {
          "id": "rainbow droppings",
          "quantity": 1,
          "resource": "rainbow droppings",
        },
        "red vial": Object {
          "id": "red vial",
          "quantity": 1,
          "resource": "red vial",
        },
        "salt": Object {
          "id": "salt",
          "quantity": 1,
          "resource": "salt",
        },
        "sarcophagus": Object {
          "id": "sarcophagus",
          "quantity": 1,
          "resource": "sarcophagus",
        },
        "scarab shell": Object {
          "id": "scarab shell",
          "quantity": 1,
          "resource": "scarab shell",
        },
        "scarab wing": Object {
          "id": "scarab wing",
          "quantity": 1,
          "resource": "scarab wing",
        },
        "scell": Object {
          "id": "scell",
          "quantity": 1,
          "resource": "scell",
        },
        "screaming brain": Object {
          "id": "screaming brain",
          "quantity": 1,
          "resource": "screaming brain",
        },
        "second heart": Object {
          "id": "second heart",
          "quantity": 1,
          "resource": "second heart",
        },
        "serrated fangs": Object {
          "id": "serrated fangs",
          "quantity": 1,
          "resource": "serrated fangs",
        },
        "shadow ink gland": Object {
          "id": "shadow ink gland",
          "quantity": 1,
          "resource": "shadow ink gland",
        },
        "shadow tentacles": Object {
          "id": "shadow tentacles",
          "quantity": 1,
          "resource": "shadow tentacles",
        },
        "shank bone": Object {
          "id": "shank bone",
          "quantity": 1,
          "resource": "shank bone",
        },
        "shark tongue": Object {
          "id": "shark tongue",
          "quantity": 1,
          "resource": "shark tongue",
        },
        "shimmering halo": Object {
          "id": "shimmering halo",
          "quantity": 1,
          "resource": "shimmering halo",
        },
        "shimmering mane": Object {
          "id": "shimmering mane",
          "quantity": 1,
          "resource": "shimmering mane",
        },
        "shining liver": Object {
          "id": "shining liver",
          "quantity": 1,
          "resource": "shining liver",
        },
        "sighing bloom": Object {
          "id": "sighing bloom",
          "quantity": 1,
          "resource": "sighing bloom",
        },
        "silken nervous system": Object {
          "id": "silken nervous system",
          "quantity": 1,
          "resource": "silken nervous system",
        },
        "silver urn": Object {
          "id": "silver urn",
          "quantity": 1,
          "resource": "silver urn",
        },
        "sinew": Object {
          "id": "sinew",
          "quantity": 1,
          "resource": "sinew",
        },
        "skull": Object {
          "id": "skull",
          "quantity": 1,
          "resource": "skull",
        },
        "small apendages": Object {
          "id": "small apendages",
          "quantity": 1,
          "resource": "small apendages",
        },
        "small feathers": Object {
          "id": "small feathers",
          "quantity": 1,
          "resource": "small feathers",
        },
        "small hand parasites": Object {
          "id": "small hand parasites",
          "quantity": 1,
          "resource": "small hand parasites",
        },
        "small sunteeth": Object {
          "id": "small sunteeth",
          "quantity": 1,
          "resource": "small sunteeth",
        },
        "spinnerets": Object {
          "id": "spinnerets",
          "quantity": 1,
          "resource": "spinnerets",
        },
        "spiral horn": Object {
          "id": "spiral horn",
          "quantity": 1,
          "resource": "spiral horn",
        },
        "stink gland": Object {
          "id": "stink gland",
          "quantity": 1,
          "resource": "stink gland",
        },
        "stomach": Object {
          "id": "stomach",
          "quantity": 1,
          "resource": "stomach",
        },
        "stout heart": Object {
          "id": "stout heart",
          "quantity": 1,
          "resource": "stout heart",
        },
        "stout hide": Object {
          "id": "stout hide",
          "quantity": 1,
          "resource": "stout hide",
        },
        "stout kidney": Object {
          "id": "stout kidney",
          "quantity": 1,
          "resource": "stout kidney",
        },
        "stout vertebrae": Object {
          "id": "stout vertebrae",
          "quantity": 1,
          "resource": "stout vertebrae",
        },
        "sunshark blubber": Object {
          "id": "sunshark blubber",
          "quantity": 1,
          "resource": "sunshark blubber",
        },
        "sunshark bone": Object {
          "id": "sunshark bone",
          "quantity": 1,
          "resource": "sunshark bone",
        },
        "sunshark fin": Object {
          "id": "sunshark fin",
          "quantity": 1,
          "resource": "sunshark fin",
        },
        "sunstones": Object {
          "id": "sunstones",
          "quantity": 1,
          "resource": "sunstones",
        },
        "sword beetle": Object {
          "id": "sword beetle",
          "quantity": 1,
          "resource": "sword beetle",
        },
        "tail feathers": Object {
          "id": "tail feathers",
          "quantity": 1,
          "resource": "tail feathers",
        },
        "thick web silk": Object {
          "id": "thick web silk",
          "quantity": 1,
          "resource": "thick web silk",
        },
        "triptych": Object {
          "id": "triptych",
          "quantity": 1,
          "resource": "triptych",
        },
        "underplate fungus": Object {
          "id": "underplate fungus",
          "quantity": 1,
          "resource": "underplate fungus",
        },
        "unlaid eggs": Object {
          "id": "unlaid eggs",
          "quantity": 1,
          "resource": "unlaid eggs",
        },
        "veined wing": Object {
          "id": "veined wing",
          "quantity": 1,
          "resource": "veined wing",
        },
        "venom sac": Object {
          "id": "venom sac",
          "quantity": 1,
          "resource": "venom sac",
        },
        "warbling bloom": Object {
          "id": "warbling bloom",
          "quantity": 1,
          "resource": "warbling bloom",
        },
        "web silk": Object {
          "id": "web silk",
          "quantity": 1,
          "resource": "web silk",
        },
        "whishbone": Object {
          "id": "whishbone",
          "quantity": 1,
          "resource": "whishbone",
        },
        "white fur": Object {
          "id": "white fur",
          "quantity": 1,
          "resource": "white fur",
        },
      },
    },
  ],
  "selectedCampaign": "960aa7ae-598a-49eb-888b-c6baa0006751",
  "subscription": Object {
    "appLastActiveAt": 0,
    "autoRenewing": false,
    "checkedAt": 0,
    "productId": "",
    "purchasedAt": 0,
    "response": "",
    "transactionId": undefined,
  },
  "version": 1,
}
`;
